--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -8,10 +8,9 @@
 
 }
 .images-wrapper{
-    text-align: center;
-    margin-top: 20px;
+    margin: 0 auto;
+    width: 400px;
 }
 .img-css{
-    width: 600px;
-    height: 500px;
+    width: 100%;
 }
